View diffs in the Editor (#130)
View diffs in the Editor

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -1276,6 +1276,18 @@ a.link-docs {
         }
     }
 
+    &.hunk {
+        background:$bcg-primary;
+    }
+
+    &.add {
+        background:rgba(green, 0.2);
+    }
+
+    &.remove {
+        background:rgba(red, 0.2);
+    }
+
 }
 
 
