Conflict Manager optimization (#132)
When we show a lot of diff fields, cloak the ones that are out of view by hiding all their contents but keep their heights the same

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -9264,6 +9264,19 @@ strong {
                                     width: 100%;
                                     border-top: 1px solid $border-primary;
 
+                                    &.cloaked {
+                                        overflow: visible;
+                                        background: $bcg-darker;
+
+                                        > .ui-header {
+                                            display: none;
+                                        }
+
+                                        > .content {
+                                            display: none;
+                                        }
+                                    }
+
                                     > .ui-header {
                                         z-index: 2;
                                         background: $bcg-dark;
