Fix 'read more' buttons disappearing after creating a new checkpoint, Fix word-break property of checkpoint descriptions when the description has no spaces

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8690,6 +8690,7 @@ strong {
 
                                         &.more {
                                             white-space: normal;
+                                            word-break: break-word;
                                         }
                                     }
 
