--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2283,7 +2283,7 @@ strong {
                 top: 0px;
             }
 
-            > .ui-button.add-script, .ui-button.add-sound-slot, .ui-button.add-batch-group, .ui-button.add-clip {
+            > .ui-button.add-script, .ui-button.add-sound-slot, .ui-button.add-batch-group, .ui-button.add-clip, .ui-button.add-i18n-asset {
                 margin: 0 0 8px 0;
                 background-color: $bcg-dark;
 
