--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8445,6 +8445,8 @@ strong {
 
                     > .side-panel-widget {
                         flex-grow: 1;
+                        height: 100%;
+
                         > .content {
                             height: 100%;
 
