--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -1227,28 +1227,11 @@ a:visited {
         background-color: $bcg-dark;
 
         > .picker-gradient-panel {
-            > .picker-gradient-header {
-                > .content {
-                    .ui-button.picker-gradient-toggle {
-                        background-color: $bcg-primary;
-                        color: $text-secondary;
-
-                        &:hover {
-                            border-color: $bcg-darker;
-                        }
-
-                        &.active {
-                            background-color: $bcg-darker;
-                        }
-                    }
-                }
-            }
-
             > .color-panel {
-                background-color: $bcg-dark;
                 > .content {
                     > .color-rect,
-                    > .hue-rect {
+                    > .hue-rect,
+                    > .alpha-rect {
                         border: 1px solid $bcg-darker;
                     }
                     > .fields {
