New editor UI - Panels & Editor Layout (#198)

--- a/editor/sass/variables.scss
+++ b/editor/sass/variables.scss
@@ -9,6 +9,8 @@ $text-secondary: #b1b8ba;
 $text-primary: #ffffff;
 $text-active: #f60;
 
+$error: #fb222f;
+
 $field-padding: 3px;
 
 $border-primary: #232e30;
