Fix usage alert, Fix resizing of toolbar buttons (#206)

--- a/editor/sass/editor/_editor-left-toolbar.scss
+++ b/editor/sass/editor/_editor-left-toolbar.scss
@@ -7,6 +7,7 @@
         padding: 0;
         width: 45px;
         height: 45px;
+        flex-shrink: 0;
         border: none;
         overflow: hidden;
 
