--- a/editor/sass/editor/editor.scss
+++ b/editor/sass/editor/editor.scss
@@ -8,3 +8,4 @@
 @import "editor-hierarchy-panel";
 @import "editor-assets-panel";
 @import "editor-attributes-panel";
+@import "editor-usage-alert";
