PAC-2892 - fix css selectors for camera preview ui
https://jira.sc-corp.net/browse/PAC-2892

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2206,55 +2206,53 @@ strong {
     }
 }
 
-.ui-panel.viewport {
+.viewport {
     @extend .noSelect;
 
-    > .content {
-        > .camera-preview {
-            display: none;
-            position: absolute;
-            top: 41px;
-            left: 4px;
-            width: 256px;
-            height: 196px;
-            border: 2px solid $text-primary;
+      > .camera-preview {
+          display: none;
+          position: absolute;
+          top: 41px;
+          left: 4px;
+          width: 256px;
+          height: 196px;
+          border: 2px solid $text-primary;
 
-            &.active {
-                display: block;
-            }
-            &.clickable {
-                cursor: pointer;
+          &.active {
+              display: block;
+          }
+          &.clickable {
+              cursor: pointer;
 
-                &:hover {
-                    border-color: $text-active;
-                }
-            }
-            > .pin {
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 24px;
-                height: 24px;
-                line-height: 26px;
-                text-align: center;
-                padding: 0;
-                margin: 0;
-                border: none;
-                color: rgba($text-primary, .75);
-                background-color: rgba($bcg-darker, .5);
-                @extend .font-icon;
+              &:hover {
+                  border-color: $text-active;
+              }
+          }
+          > .pin {
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 24px;
+              height: 24px;
+              line-height: 26px;
+              text-align: center;
+              padding: 0;
+              margin: 0;
+              border: none;
+              color: rgba($text-primary, .75);
+              background-color: rgba($bcg-darker, .5);
+              @extend .font-icon;
 
-                &.active {
-                    color: $text-active;
-                    background-color: transparent;
-                }
-                &:hover {
-                    color: $text-primary;
-                    background-color: rgba($bcg-darker, .75);
-                }
-            }
-        }
-    }
+              &.active {
+                  color: $text-active;
+                  background-color: transparent;
+              }
+              &:hover {
+                  color: $text-primary;
+                  background-color: rgba($bcg-darker, .75);
+              }
+          }
+      }
 }
 
 .ui-tree.hierarchy {
