Disable import ammo button when we don't have permissions

--- a/editor/sass/pcui/_pcui-label-group.scss
+++ b/editor/sass/pcui/_pcui-label-group.scss
@@ -22,3 +22,9 @@
         }
     }
 }
+
+.pcui-label-group.pcui-disabled {
+    > .pcui-label {
+        opacity: $element-opacity-disabled;
+    }
+}
